--- a/OS/lab2/style.css
+++ b/OS/lab2/style.css
@@ -5,12 +5,21 @@ body, html, #screen, #process {
     height: 100%;
 }
 
+body {
+    overflow: hidden;
+}
+
 #process {
-    position: absolute;
-    right: 10px;
-    top: 10px;
+    float: right;
+    display: inline-block;
     width: 200px;
     height: 200px;
+}
+
+#screen {
+    float: left;
+    display: inline-block;
+    width: 700px;
 }
 
 #add-process-num, #add-process-btn, #select-process, #process-speed {
@@ -26,4 +35,10 @@ body, html, #screen, #process {
     padding-right: 15px;
     line-height: 25px;
     height: 25px;
+}
+
+.max-width {
+    width: 900px;
+    padding-top: 80px;
+    margin: 120px auto;
 }
